--- a/springboot-mongodb-crud-application/pom.xml
+++ b/springboot-mongodb-crud-application/pom.xml
@@ -85,6 +85,12 @@
 			<artifactId>reactor-test</artifactId>
 			<scope>test</scope>
 		</dependency>
+
+		<dependency>
+			<groupId>org.springdoc</groupId>
+			<artifactId>springdoc-openapi-ui</artifactId>
+			<version>1.5.2</version>
+		</dependency>
 	</dependencies>
 
 	<build>
