--- a/react-ts-material-ui-crud-demo/package.json
+++ b/react-ts-material-ui-crud-demo/package.json
@@ -15,6 +15,7 @@
     "@types/react-router-dom": "^5.1.8",
     "axios": "^0.21.1",
     "bootstrap": "^5.0.2",
+    "json-server": "^0.16.3",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-router-dom": "^5.2.0",
@@ -24,6 +25,7 @@
   },
   "scripts": {
     "start": "react-scripts start",
+    "start:json-server": "json-server --watch db.json",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
