--- a/react-ts-material-ui-crud-demo/package.json
+++ b/react-ts-material-ui-crud-demo/package.json
@@ -25,7 +25,7 @@
   },
   "scripts": {
     "start": "react-scripts start",
-    "start:json-server": "json-server --watch db.json",
+    "start:json-server": "json-server --watch src/db.json",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
