--- a/springboot-mongodb-crud-application/src/main/resources/application.properties
+++ b/springboot-mongodb-crud-application/src/main/resources/application.properties
@@ -1,3 +1,13 @@
 # MongoDB
 spring.data.mongodb.database=crudapplicationdb
 spring.data.mongodb.port=27017
+
+# MySQL 
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.url=jdbc:mysql://localhost:3306/<db-name>?serverTimezone=UTC
+spring.datasource.username=root
+spring.datasource.password=
+spring.jpa.properties..hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
+spring.jpa.hibernate.ddl-auto=update
+spring.datasource.initialize=true
+spring.jpa.show-sql=true
